# physrisk-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  get_asset_impact.cwl  get_asset_impact.py  get_asset_impact_file.cwl  main.py  parse_json.cwl  pyproject.toml  requirements-dev.txt  requirements.txt
asset_output/: catalog.json
documentation/: call.http  deploy.http  realestate_assets.geojson  realestate_assets_request.json
json_schema/: current_request_example2.json  current_response_example2.json  current_response_schema.json  proposed_request_example.json  proposed_request_example2.json  proposed_request_schema.json  proposed_response_example.json  proposed_response_example2.json  request.json  request_RealEstateAsset.json  request_ThermalPowerGeneratingAsset.json  response.json  response_RealEstateAsset.json  response_ThermalPowerGeneratingAsset.json
json_schema/request/current/: current_request_example.json  current_request_schema.json
json_schema/response/current/: current_response_example.json  current_response_schema.json
json_schema/response/proposed/: example_response_smaller.json  proposed_flat_response_example.json  proposed_flat_response_example2.json
src/: Dockerfile  requirements.txt
src/app/: convert_formats.py  get_asset_impact.py  main.py  physrisk_cli_logger.py
